# higher-criticism-stylometry

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hc_stylometry/: __init__.py  core.py  discriminator.py  preprocessing.py  sampling.py  utils.py
